Correcciones severas en los sensores realizadas.

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,12 @@
 /ElectroValvula/nbproject/private/
 /BombaAgua/nbproject/private/
 /SistemaFertirrigacion/nbproject/private/
+/ControladorCentral/nbproject/private/
+/sensorHumedad1/nbproject/private/
+/BombaAgua/build/
+/ControladorCentral/build/
+/ControladorCentral/dist/
+/sensorHumedad1/build/
+/sensorLluvia/target/
+/sensorRadiacion/target/
+/SensorTemperatura/target/
