--- a/sensorHumedad1/nbproject/project.properties
+++ b/sensorHumedad1/nbproject/project.properties
@@ -75,7 +75,7 @@ main.class=sensorhumedad1.SensorHumedad1
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
-platform.active=default_platform
+platform.active=JDK_24
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
