--- a/sensorHumedad4/nbproject/private/private.properties
+++ b/sensorHumedad4/nbproject/private/private.properties
@@ -1,1 +1,1 @@
-user.properties.file=C:\\Users\\Evelin Suarez\\AppData\\Roaming\\NetBeans\\27\\build.properties
+user.properties.file=C:\\Users\\Propietario\\AppData\\Roaming\\NetBeans\\22\\build.properties
