New Fertirrigacion Feature: Agregamos fertirrigacion y mejoramos el sistema de coordinadorBomba

--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,9 @@
 /SensorTemperatura/target/
 /Parcela/target/
 /ElectroValvula/build/
+/ElectroValvula2/build/
+/ElectroValvula3/build/
+/ElectroValvula4/build/
+/ElectroValvula5/build/
+/ElectroValvula6/build/
+/ElectroValvula7/build/
