Correccion basica y un poco de documentacion en HiloReceptorElectrovalvula

--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,11 @@
 /ElectroValvula5/build/
 /ElectroValvula6/build/
 /ElectroValvula7/build/
+/ElectroValvula2/nbproject/private/
+/ElectroValvula3/nbproject/private/
+/ElectroValvula4/nbproject/private/
+/ElectroValvula5/nbproject/private/
+/ElectroValvula6/nbproject/private/
+/ElectroValvula7/nbproject/private/
+/SistemaFertirrigacion/build/
+/ElectroValvula2/dist/
