add new files to the .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,8 @@
 /ElectroValvula7/nbproject/private/
 /SistemaFertirrigacion/build/
 /ElectroValvula2/dist/
+/build-impl.xml
+/genfiles.properties
+/.idea/
+/private.properties
+/project.xml
