--- a/ElectroValvula7/nbproject/private/private.properties
+++ b/ElectroValvula7/nbproject/private/private.properties
@@ -1,1 +1,1 @@
-user.properties.file=C:\\Users\\Propietario\\AppData\\Roaming\\NetBeans\\22\\build.properties
+user.properties.file=C:\\Users\\Usuario\\AppData\\Roaming\\NetBeans\\16\\build.properties
