implementacion de algoritmo de seleccion en controlador central

--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,13 @@
 /SistemaFertirrigacion/dist/
 /ServidorExclusionMutua/target/
 /sensorHumedad1/dist/
+/ElectroValvula/dist/
+/ElectroValvula3/dist/
+/ElectroValvula4/dist/
+/ElectroValvula5/dist/
+/ElectroValvula6/dist/
+/ElectroValvula7/dist/
+/sensorHumedad2/dist/
+/sensorHumedad3/dist/
+/sensorHumedad4/dist/
+/sensorHumedad5/dist/
