--- a/ElectroValvula3/nbproject/private/private.properties
+++ b/ElectroValvula3/nbproject/private/private.properties
@@ -1,1 +1,8 @@
-user.properties.file=C:\\Users\\Propietario\\AppData\\Roaming\\NetBeans\\22\\build.properties
+compile.on.save=false
+do.depend=false
+do.jar=true
+do.jlink=false
+javac.debug=true
+javadoc.preview=true
+jlink.strip=false
+user.properties.file=C:\\Users\\Evelin Suarez\\AppData\\Roaming\\NetBeans\\27\\build.properties
